--- a/DesafioFundamentos/DesafioFundamentos.csproj
+++ b/DesafioFundamentos/DesafioFundamentos.csproj
@@ -7,4 +7,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Linq" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
